--- a/css/bio.css
+++ b/css/bio.css
@@ -1,13 +1,14 @@
 /*
  * Globals
  */
-*, *:before, *:after{
+ *, *:before, *:after{
     box-sizing: border-box;
 }
 
 /*
  * Base structure
  */
+
 html,
 body {
     font-size: 16px;
@@ -23,11 +24,44 @@ body {
     font-size: 1rem;
     margin: 0;
     padding: 0;
+    
 }
 
-li{
-    text-align: left;
+h1 {
+    font-family: 'Shadows Into Light', cursive;
+    font-size: 84px;
+    text-align: center;
+    margin: 0;
+    padding: 20px 20px;
+    color: rgb(145, 223, 117);
 }
+
+.bio {
+    font-family: 'Shadows Into Light', cursive;
+    font-size: 26px;
+    text-align: center;   
+    line-height: 2;
+    letter-spacing: 1px;
+    color: #fff;
+
+}
+
+.bio_container {
+    padding: 0px 60px 0px 60px;
+}
+.profile {
+    border-radius: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+    padding-bottom: 20px;
+}
+
+
+
+
+
 
 
 /* Links/Actions */
@@ -62,9 +96,10 @@ a:hover {
     color: rgb(16,16,16)
 }
 
-/*
- * Header
- */
+
+
+/* Header */
+
 .masthead {
     margin-bottom: 2rem;
 }
@@ -105,64 +140,6 @@ a:hover {
     }
 }
 
-
-
-/*
- * Cover
- */
-.cover {
-    padding: 0 1.5rem;
-}
-.cover .btn-lg {
-    padding: .75rem 1.25rem;
-    font-weight: 700;
-}
-
-.cover-container {
-    max-width: 45rem;
-}
-
-.lead {
-    font-size: 3rem;
-    font-weight: 600;
-}
-
-.jumbotron2 {
-    background-image: url('../images/Logo-Global-Snake2.png');
-    background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-    border-radius: 0.3rem;
-    padding: 2rem 1rem;
-    margin-bottom: 2rem;    
-}
-
-@media (min-width: 576px) {
-    .jumbotron2 {
-    padding: 4rem 2rem;
-    }
-}
-
-.jumbotron2-fluid {
-    padding-right: 0;
-    padding-left: 0;
-    border-radius: 0;
-}
-
-.hero-img{
-    background-image: url('../images/globe.jpeg');
-    background-position: center;
-    background-size: cover;
-    border-radius: 0.3rem;
-    display: flex;
-    height: 400px;
-    justify-content: center;
-    align-items: center;
-    padding: 2rem 1rem;
-    margin-bottom: 2rem;
-}
-
-
 /* Main */
 
 .match-list{
@@ -171,15 +148,6 @@ a:hover {
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
     color: white;
     font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-}
-
-.match-list > div:hover{
-    background-color:rgb(145, 223, 117);
-    color: black;
-    cursor: pointer;
-    border-radius:5px;
-    /* text-align: left; */
-    text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
 }
 
 .modal-header{
