--- a/css/bio.css
+++ b/css/bio.css
@@ -55,6 +55,7 @@ h1 {
     margin-left: auto;
     margin-right: auto;
     width: 25%;
+    min-width: 200px;
     padding-bottom: 20px;
 }
 
@@ -88,6 +89,10 @@ a:hover {
 
 .btn {
     color: rgb(145, 223, 117);
+}
+
+li {
+    text-align: left;
 }
 
 .snakeButton{
